src/test/compile-fail/missing-return.rs
// error-pattern: return

fn f() -> int { }

fn main() { f(); }

